tests/ui/rfcs/rfc-2093-infer-outlives/unexpected-error.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/unexpected-error.rs:5:22
   |
LL |     let x = 3;
   |         - binding `x` declared here
LL |     let _ = Foo { t: &x };
   |                      ^^
   |                      |
   |                      borrowed value does not live long enough
   |                      this usage requires that `x` is borrowed for `'static`
LL | }
   | - `x` dropped here while still borrowed

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
